<resources>
    <string name="app_name">Dogfriendly_StudProject</string>
    <string name="actual_app_name">DogFriendly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sending_message_event">Отправка сообщения…</string>
    <string name="new_message">Сообщение…</string>
    <string name="edit_message">Редактировать</string>
    <string name="delete_message">Удалить для всех</string>
    <string name="ok">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="loading">Загрузка…</string>
    <string name="open_user_profile">Открыть профиль</string>
    <string name="disable_notification">Отключить уведомления</string>
    <string name="add_user_to_chat">Добавить в чат</string>
    <string name="delete_all_messages">Очистить переписку</string>
    <string name="add_to_blacklist">Добавить в черный список</string>
    <string name="welcome_to_dogfriendly">Добро пожаловать в DogFriendly!</string>
    <string name="welcome_text">Здесь вы найдете компанию для прогулки с питомцем.</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="reset_password_here">Сбросьте его здесь</string>
    <string name="sign_in_action">Войти</string>
    <string name="password">Пароль</string>
    <string name="e_mail">e-mail</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="are_you_already_have_an_account">Уже есть аккаунт?</string>
    <string name="sign_in_here">Войдите здесь</string>
    <string name="please_use_real_name">Пожалуйста, укажите реальное имя - оно будет использоваться при взаимодействии с другими пользователями</string>
    <string name="what_is_your_name">Как Вас зовут?</string>
    <string name="follow_the_link_and_create_a_new_password" formatted="true">Перейдите по ней и придумайте новый пароль, а потом войдите в <b>DogFriendly</b> как обычно.</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="reset_password_hint">Не страшно! Введите свою почту в поле ниже и мы пришлем вам ссылку для сброса пароля.</string>
    <string name="password_successfully_reset">Пароль сброшен!</string>
    <string name="ours_corgis_from_support">Наши корги из службы поддержки уже отправили вам ссылку для сброса пароля.</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="pets_on_map">Питомцы на карте</string>
    <string name="geolocation_hint_1">К сожалению, наше приложение не может работать без передачи геоданных.</string>
    <string name="geolocation_hint_2">Другие пользователи смогут увидеть Ваше местоположение только когда вы активируете статус</string>
    <string name="user_status">«На прогулке»</string>
    <string name="turn_on_geolocation">Включить геолокацию</string>
    <string name="invitations_and_chats">Приглашения и чаты</string>
    <string name="invitations_and_chats_hint_1">Когда вам кто-то напишет или пригласит на прогулку, то вам придет уведомление.</string>
    <string name="invitations_and_chats_hint_2">Позже вы всегда сможете отключить уведомления в настройках.</string>
    <string name="skip">Пропустить</string>
    <string name="turn_on_notifications">Включить уведомления</string>
    <string name="hooray">Ура!</string>
    <string name="continue_finish_registration">Продолжить</string>

    <string name="user_with_that_email_address_not_found">Не найден пользователь с таким e-mail</string>
    <string name="no_internet_connection">Не удается установить связь с сервером</string>
    <string name="empty_email">Введите свою почту в это поле</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="on_sign_up_finished_hint">Все готово.Теперь расскажите о себе и своём питомце и скорее на прогулку!</string>
    <string name="title_profile">Профиль</string>
    <string name="title_map">Карта</string>
    <string name="title_channels">Сообщения</string>
    <string name="title_options">Настройки</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="character">Характер</string>
    <string name="done">Готово</string>
    <string name="about_dog">О собаке</string>
    <string name="photo">Фото</string>
    <string name="crop_image_menu_crop">Готово</string>
    <string name="men_sign">/u2642</string>
    <string name="woman_sign">/u2640</string>
    <string name="men">\u2642 Муж.</string>
    <string name="woman">\u2640 Жен.</string>


    <!--ChannelList-->
    <string name="channel_delete_button">Удалить</string>
    <string name="channel_notification_turn_off_button">Выкл.звук</string>
    <string name="channel_notification_turn_on_button">Вкл.звук</string>
    <string name="channel_pin_button">Закрепить</string>
    <string name="channel_unpin_button">Открепить</string>

    <!--Invitation Activity-->
    <string name="invitation_headline">Приглашение</string>
    <string name="invitation_title_name">Название</string>
    <string name="invitation_name_hint">Укажите название, отражающее цель встречи.</string>
    <string name="invitation_title_description">Описание</string>
    <string name="invitation_title_description_hint">Расскажите о цели втречи...</string>
    <string name="invitation_access_to_chat">Доступ в чат</string>
    <string name="invitation_access_free">Свободный</string>
    <string name="invitation_access_free_hint">Любой человек сможет сразу присоединиться к чату.</string>
    <string name="invitation_access_request">По запросу</string>
    <string name="invitation_access_request_hint">Только после подтверждения доступа создателем всречи.</string>
    <string name="invitation_radius_title">Радиус видимости</string>
    <string name="invitation_radius_hint">Приглашение будет видно на карте людям, находящимся в данном радисе от вас.</string>
    <string name="invitation_visible_time">Время видимости</string>
    <string name="invitation_visible_time_six">6 часов</string>
    <string name="invitation_visible_time_twelve">12 часов</string>
    <string name="invitation_visible_time_day">24 часа</string>
    <string name="invitation_visible_time_hint">Приглашение автоматически исчезнет с карты, но его всегда можно будет активировать в настройках чата встречи.</string>
    <string name="invitation_create_button">Создать</string>
    
    
    <!-- Walk Activity  -->
    <string name="walk_title">Прогулка</string>
    <string name="members_quantity_TEST">Количество учатников</string>
    <string name="access_request_description">Доступ в чат этой встречи осуществляется <b>По запросу</b>. Ответьте на приглашение, чтобы создатель чата смог добавить вас в чат.</string>
    <string name="access_free_description">Доступ в чат этой встречи <b>Свободный</b>. Ответьте на приглашение, чтобы создатель чата смог добавить вас в чат.</string>
    <string name="description_title">Описание</string>
    <string name="description_text_TEST">Встречаемся, чтобы прогуляться в лесу со своимим собачками, можно поискать ещё грибы и ягоды.</string>
    <string name="creator_title">Создтель</string>
    <string name="creator_name_TEST">ИМЯ</string>
    <string name="creator_age_TEST">ВОЗРАСТ</string>
    <string name="member_list_title">Участники</string>
    <string name="breed_label">Порода</string>

    <string name="your_pet">Ваш питомец</string>
    <string name="pet_name_label">Имя питомца</string>
    <string name="pet_age_label">Возраст</string>
    <string name="pet_gender_label">Пол питомца</string>
    <string name="sign_out">Выйти из учетной записи</string>
    <string name="empty_chat_text">Итак, а теперь договоритесь о встрече и в путь!</string>

</resources>
