<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/item_open_user_profile"
        android:title="@string/open_user_profile"
        android:visible="true"
        android:icon="@drawable/ic_item_chat_menu_icon"/>

    <item android:id="@+id/item_disable_notification"
        android:title="@string/disable_notification"
        android:visible="true"
        android:icon="@drawable/ic_item_chat_menu_icon"/>

    <item android:id="@+id/item_add_user"
        android:title="@string/add_user_to_chat"
        android:visible="true"
        android:icon="@drawable/ic_item_chat_menu_icon"/>

    <item android:id="@+id/item_delete_all_messages"
        android:title="@string/delete_all_messages"
        android:visible="true"
        android:icon="@drawable/ic_item_chat_menu_icon"/>

    <item android:id="@+id/item_add_to_blacklist"
        android:title="@string/add_to_blacklist"
        android:visible="true"
        android:icon="@drawable/ic_item_chat_menu_icon"/>

</menu>