<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/invitation_scroll_view"
    android:scrollbars="none"
    tools:context=".ui.fragment.InvitationFragment">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitation_headline"
                android:textColor="@color/invitation_activity_black_text"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="0dp"
                android:src="@drawable/ic_baseline_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/invitation_line"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/invitation_activity_title_text"
            android:text="@string/invitation_title_name"
            android:layout_marginStart="24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/invitation_activity_textview_background"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_name_hint"
            android:textSize="13sp"
            android:textColor="@color/invitation_activity_grey_text"
            android:layout_marginStart="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_title_description"
            android:textSize="14sp"
            android:textColor="@color/invitation_activity_title_text"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/invitation_activity_textview_background"
            android:hint="@string/invitation_title_description_hint"
            android:textSize="15sp"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_access_to_chat"
            android:textColor="@color/invitation_activity_title_text"
            android:textSize="14sp"
            android:layout_marginStart="24dp"/>

        <RadioGroup
            android:id="@+id/rg_access_to_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/access_to_chat_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invitation_access_free"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@drawable/custom_radio_button_text"
                android:layout_marginStart="87dp"
                android:layout_marginTop="20dp"
                android:paddingStart="12dp"
                android:checked="true"
                android:button="@drawable/custom_radio_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitation_access_free_hint"
                android:textSize="13sp"
                android:layout_marginStart="119dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"/>

            <RadioButton
                android:id="@+id/access_to_chat_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="87dp"
                android:layout_marginTop="20dp"
                android:paddingStart="12dp"
                android:text="@string/invitation_access_request"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@drawable/custom_radio_button_text"
                android:checked="false"
                android:button="@drawable/custom_radio_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitation_access_request_hint"
                android:textSize="13sp"
                android:layout_marginStart="119dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_radius_title"
            android:textColor="@color/invitation_activity_title_text"
            android:textSize="14sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"/>

       <!-- <include layout="@layout/view_thumb_text_seekbar"/> -->


        <TextView
            android:id="@+id/tv_thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="9 км"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <SeekBar
            android:id="@+id/sb_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:max="25"
            android:progress="9"
            android:theme="@style/invitationSeekBar"
            android:thumb="@drawable/custom_radius_seekbar"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_radius_hint"
            android:textColor="@color/invitation_activity_grey_text"
            android:layout_marginTop="22dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_visible_time"
            android:textColor="@color/invitation_activity_title_text"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <RadioGroup
                android:id="@+id/rg_visible_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radius_six_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invitation_visible_time_six"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@drawable/custom_radio_button_text"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="start"
                    android:paddingStart="12dp"
                    android:checked="true"
                    android:button="@drawable/custom_radio_button"/>
                <RadioButton
                    android:id="@+id/radius_twelve_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invitation_visible_time_twelve"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@drawable/custom_radio_button_text"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="start"
                    android:paddingStart="12dp"
                    android:checked="false"
                    android:button="@drawable/custom_radio_button"/>
                <RadioButton
                    android:id="@+id/radius_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invitation_visible_time_day"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@drawable/custom_radio_button_text"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="start"
                    android:paddingStart="12dp"
                    android:checked="false"
                    android:button="@drawable/custom_radio_button"/>

            </RadioGroup>
        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invitation_visible_time_hint"
            android:textColor="@color/invitation_activity_grey_text"
            android:textSize="13sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invitation_create_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textAllCaps="false"
            android:background="@drawable/custom_create_button"/>









    </LinearLayout>

</ScrollView>