<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.WalkFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <TextView
                android:id="@+id/walk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walk_title"
                android:textColor="@color/activity_black_text"
                android:textSize="22sp"
                android:layout_marginTop="34dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/members_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/members_quantity_TEST"
                android:textSize="15sp"
                android:textColor="@color/activity_grey_text"
                android:layout_marginTop="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/walk_title"/>

            <ImageView
                android:id="@+id/walk_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/walk_access_close"
                android:layout_marginTop="39dp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/walk_title"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/walk_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/walk_messages_icon"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/walk_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/walk_more_vert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/walk_messages" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/walk_access_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/access_request_description"
                    android:textColor="@color/channellist_activity_message_text"
                    android:textSize="13sp"
                    android:background="@color/walk_access_background"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_title"
                android:textSize="14sp"
                android:textColor="@color/activity_title_text"/>

            <TextView
                android:id="@+id/walk_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_text_TEST"
                android:textSize="15sp"
                android:textColor="@color/activity_black_text"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator_title"
                android:textSize="14sp"
                android:textColor="@color/activity_title_text"
                android:layout_marginTop="24dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/walk_creator_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_user_profile_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/walk_creator_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_name_TEST"
                    android:textColor="@color/activity_black_text"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/walk_creator_image"/>

                <TextView
                    android:id="@+id/walk_creator_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_age_TEST"
                    android:textColor="@color/activity_grey_text"
                    android:textSize="15sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@id/walk_creator_name"
                    app:layout_constraintStart_toEndOf="@id/walk_creator_image"/>

                <ImageView
                    android:id="@+id/open_user_description_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/open_user_description"
                    android:layout_marginEnd="11dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_list_title"
                android:textSize="14sp"
                android:textColor="@color/activity_title_text"
                android:layout_marginTop="24dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_walk_members"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>